# smslm

./: .gitignore  README.md  build.gradle.kts
src/androidTest/java/com/example/smslm/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  llm_inference.cpp  llm_inference.h  smslm.cpp
src/main/java/com/example/smslm/: smslm.kt
src/test/java/com/example/smslm/: ExampleUnitTest.kt
